<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/frame_to_test"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.neighbour_list.NeighbourProfileActivity"
        android:background="@color/black"
        android:orientation="vertical"
        android:fitsSystemWindows="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/avatar_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:scaleType="centerCrop">
            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/neighbour_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="NeighbourName"
                    android:layout_marginTop="255dp"
                    android:layout_marginLeft="20dp"
                    android:textSize="25dp"
                    android:textColor="#fff"></TextView>

            </LinearLayout>

        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="430dp"
            android:layout_marginTop="299dp"
            android:background="#DCDCDC">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="4">

                    <LinearLayout
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_width="match_parent">

                        <TextView
                            android:id="@+id/neighbour_name2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="NeighbourName"
                            android:gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:textSize="20sp"
                            android:textColor="#000"></TextView>
                    </LinearLayout>

                    <android.support.constraint.ConstraintLayout
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_width="match_parent">

                        <TextView
                            android:id="@+id/localisation"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Localisation"
                            android:layout_marginLeft="40dp"
                            android:gravity="center_vertical"></TextView>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintRight_toLeftOf="@+id/localisation"
                            app:layout_constraintBottom_toBottomOf="@+id/localisation">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="15dp"
                                android:src="@drawable/ic_location_on_black_24dp"></ImageView>
                        </LinearLayout>
                    </android.support.constraint.ConstraintLayout>

                    <android.support.constraint.ConstraintLayout
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/mobile"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="N° de téléphone"
                            android:layout_marginLeft="40dp"
                            android:gravity="center_vertical"></TextView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:layout_constraintStart_toStartOf="@+id/mobile">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="34dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginLeft="8dp"
                                android:src="@drawable/ic_phone_black_24dp"></ImageView>
                        </LinearLayout>


                    </android.support.constraint.ConstraintLayout>

                    <android.support.constraint.ConstraintLayout
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_width="match_parent">

                        <TextView
                            android:id="@+id/web"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Site web"
                            android:layout_marginLeft="40dp"
                            android:gravity="center_vertical"></TextView>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@+id/web"
                            app:layout_constraintBottom_toTopOf="@+id/web"
                            app:layout_constraintRight_toLeftOf="@id/web">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_language_black_24dp"
                                android:layout_marginRight="10dp"></ImageView>
                        </LinearLayout>
                    </android.support.constraint.ConstraintLayout>

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="255dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="44dp"
                    android:background="#DCDCDC">
                </View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="À propos de moi"
                        android:textSize="20sp"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/black"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="45dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Bonjour !Je souhaiterais faire de la marche nordique. Pas initiée, je recherche une ou plusieurs personnes susceptibles de m'accompagner !J'aime les jeux de cartes tels la belote et le tarot.."
                        android:textSize="15dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginLeft="10dp"></TextView>
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </RelativeLayout>

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:background="#0000"
                ></ImageButton>
        </android.support.design.widget.CoordinatorLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/favButton"
            android:layout_width="115dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="275dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="#fff"
            android:src="@drawable/ic_star_border_white_24dp"
            app:fabCustomSize="50dp"
            app:borderWidth="0dp">
        </android.support.design.widget.FloatingActionButton>

    </RelativeLayout>
</ScrollView>